fixing overflow issues on ios

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -28,6 +28,7 @@ main[role="main"],
 main.main {
     width: 100%;
     width: 100vw;
+    max-width:100vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
